2010-06-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/sciwrappers.c, src/plugindata.h, src/pluginutils.c, src/main.c,
   doc/pluginsignals.c, doc/pluginsymbols.c, doc/Makefile.am,
   doc/plugins.dox:
   Move plugin signals docs to pluginsignals.c, using function
   pointer syntax instead of @signaldef as this puts a summary of
   the signal names at the top of the page and sorts alphabetically.
   (Note: the syntax is similar to Vala signal syntax).


2010-06-24  Lex Trotman  <elextr(at)gmail(dot)com>

 * src/build.c
   Make default dialog entries use GTK_STATE_INSENSITIVE color not
   a fixed color (Suggestion by Ditmar Zhekov)


2010-06-23  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c, doc/geany.txt, doc/geany.html:
   Implement Find in Files file pattern search.
 * src/search.c:
   Add file pattern to combo box history.
 * src/dialogs.c, src/vte.c, src/search.c, src/ui_utils.c,
   plugins/export.c:
   Use ui_hookup_widget() instead of g_object_set_data_full() for
   widgets.


2010-06-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Add Files checkbox and combo to Find in Files dialog, currently
   does nothing & is disabled.
   Don't try to focus the next entry on pressing tab anymore as this
   is more complicated now.


2010-06-21  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/search.c:
   Put Find in Files Search field above Directory field.
 * src/search.c, doc/geany.txt:
   Simplify FIF 'Fixed strings, Grep regular expressions, Extended
   regular expressions' radio buttons with a 'Use regular expressions'
   checkbox. This uses the extended syntax (which is the same as the
   Find/Replace regex syntax).
 * src/search.c:
   Move 2 Find in Files checkboxes for even spacing.


2010-06-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * tagmanager/tm_work_object.c:
   Change of description of tm_get_real_path(). Patch by Dimitar Zhekov.